--- a/index.html
+++ b/index.html
@@ -109,12 +109,12 @@
                                 enim.</p>
                         </div>
                         <div class="article-btn">
-                            <button class="searchBtn btn " type="search"><img class="btn-img" src="./images/star-plus-outline.png"
-                                    alt=""></button>
-                            <button class="searchBtn btn " type="search"><img class="btn-img" src="./images/eye-plus-outline.png"
-                                    alt=""></button>
-                            <button class="searchBtn btn " type="search"><img class="btn-img" src="./images/share-variant-outline.png"
-                                    alt=""></button>
+                            <button class="searchBtn btn " type="search"><img class="btn-img"
+                                    src="./images/star-plus-outline.png" alt=""></button>
+                            <button class="searchBtn btn " type="search"><img class="btn-img"
+                                    src="./images/eye-plus-outline.png" alt=""></button>
+                            <button class="searchBtn btn " type="search"><img class="btn-img"
+                                    src="./images/share-variant-outline.png" alt=""></button>
                         </div>
 
                     </div>
@@ -127,12 +127,12 @@
                                 enim.</p>
                         </div>
                         <div class="article-btn">
-                            <button class="searchBtn btn " type="search"><img class="btn-img" src="./images/star-plus-outline.png"
-                                    alt=""></button>
-                            <button class="searchBtn btn " type="search"><img class="btn-img" src="./images/eye-plus-outline.png"
-                                    alt=""></button>
-                            <button class="searchBtn btn " type="search"><img class="btn-img" src="./images/share-variant-outline.png"
-                                    alt=""></button>
+                            <button class="searchBtn btn " type="search"><img class="btn-img"
+                                    src="./images/star-plus-outline.png" alt=""></button>
+                            <button class="searchBtn btn " type="search"><img class="btn-img"
+                                    src="./images/eye-plus-outline.png" alt=""></button>
+                            <button class="searchBtn btn " type="search"><img class="btn-img"
+                                    src="./images/share-variant-outline.png" alt=""></button>
                         </div>
                     </div>
                     <div class="articles article3">
@@ -144,12 +144,12 @@
                                 enim.</p>
                         </div>
                         <div class="article-btn">
-                            <button class="searchBtn btn " type="search"><img class="btn-img" src="./images/star-plus-outline.png"
-                                    alt=""></button>
-                            <button class="searchBtn btn " type="search"><img class="btn-img" src="./images/eye-plus-outline.png"
-                                    alt=""></button>
-                            <button class="searchBtn btn " type="search"><img class="btn-img" src="./images/share-variant-outline.png"
-                                    alt=""></button>
+                            <button class="searchBtn btn " type="search"><img class="btn-img"
+                                    src="./images/star-plus-outline.png" alt=""></button>
+                            <button class="searchBtn btn " type="search"><img class="btn-img"
+                                    src="./images/eye-plus-outline.png" alt=""></button>
+                            <button class="searchBtn btn " type="search"><img class="btn-img"
+                                    src="./images/share-variant-outline.png" alt=""></button>
                         </div>
                     </div>
                     <div class="articles article4">
@@ -161,12 +161,12 @@
                                 enim.</p>
                         </div>
                         <div class="article-btn">
-                            <button class="searchBtn btn " type="search"><img class="btn-img" src="./images/star-plus-outline.png"
-                                    alt=""></button>
-                            <button class="searchBtn btn " type="search"><img class="btn-img" src="./images/eye-plus-outline.png"
-                                    alt=""></button>
-                            <button class="searchBtn btn " type="search"><img class="btn-img" src="./images/share-variant-outline.png"
-                                    alt=""></button>
+                            <button class="searchBtn btn " type="search"><img class="btn-img"
+                                    src="./images/star-plus-outline.png" alt=""></button>
+                            <button class="searchBtn btn " type="search"><img class="btn-img"
+                                    src="./images/eye-plus-outline.png" alt=""></button>
+                            <button class="searchBtn btn " type="search"><img class="btn-img"
+                                    src="./images/share-variant-outline.png" alt=""></button>
                         </div>
                     </div>
                     <div class="articles article5">
@@ -178,12 +178,12 @@
                                 enim.</p>
                         </div>
                         <div class="article-btn">
-                            <button class="searchBtn btn " type="search"><img class="btn-img" src="./images/star-plus-outline.png"
-                                    alt=""></button>
-                            <button class="searchBtn btn " type="search"><img class="btn-img" src="./images/eye-plus-outline.png"
-                                    alt=""></button>
-                            <button class="searchBtn btn " type="search"><img class="btn-img" src="./images/share-variant-outline.png"
-                                    alt=""></button>
+                            <button class="searchBtn btn " type="search"><img class="btn-img"
+                                    src="./images/star-plus-outline.png" alt=""></button>
+                            <button class="searchBtn btn " type="search"><img class="btn-img"
+                                    src="./images/eye-plus-outline.png" alt=""></button>
+                            <button class="searchBtn btn " type="search"><img class="btn-img"
+                                    src="./images/share-variant-outline.png" alt=""></button>
                         </div>
                     </div>
                     <div class="articles article6">
@@ -196,12 +196,12 @@
                         </div>
 
                         <div class="article-btn">
-                            <button class="searchBtn btn " type="search"><img class="btn-img" src="./images/star-plus-outline.png"
-                                    alt=""></button>
-                            <button class="searchBtn btn " type="search"><img class="btn-img" src="./images/eye-plus-outline.png"
-                                    alt=""></button>
-                            <button class="searchBtn btn " type="search"><img class="btn-img" src="./images/share-variant-outline.png"
-                                    alt=""></button>
+                            <button class="searchBtn btn " type="search"><img class="btn-img"
+                                    src="./images/star-plus-outline.png" alt=""></button>
+                            <button class="searchBtn btn " type="search"><img class="btn-img"
+                                    src="./images/eye-plus-outline.png" alt=""></button>
+                            <button class="searchBtn btn " type="search"><img class="btn-img"
+                                    src="./images/share-variant-outline.png" alt=""></button>
                         </div>
                     </div>
                 </div>
@@ -236,8 +236,6 @@
                     <div class="account">
                         <a class="profileBtn btn " type="submit"><img class="prof-img" src="./images/prof-img.jpeg"
                                 alt=""></a>
-
-
                         <li>
                             <div class="username">@tegan</div>
                             <div class="about">World peace Builder</div>
@@ -246,7 +244,6 @@
                     <div class="account">
                         <a class="profileBtn btn " type="submit"><img class="prof-img" src="./images/prof-img.jpeg"
                                 alt=""></a>
-
                         <li>
                             <div class="username">@morgan</div>
                             <div class="about">Super Cool project</div>
@@ -255,7 +252,6 @@
                     <div class="account">
                         <a class="profileBtn btn " type="submit"><img class="prof-img" src="./images/prof-img.jpeg"
                                 alt=""></a>
-
                         <li>
                             <div class="username">@kendall</div>
                             <div class="about">Life changing app</div>
@@ -264,7 +260,6 @@
                     <div class="account">
                         <a class="profileBtn btn " type="submit"><img class="prof-img" src="./images/prof-img.jpeg"
                                 alt=""></a>
-
                         <li>
                             <div class="username">@alex</div>
                             <div class="about">No traffic master</div>
